Added logo and images

--- a/test.html
+++ b/test.html
@@ -9,13 +9,22 @@
 
 <body> 
     <div class = "flex">
-        <header>
+        <div id = "navbar">
+
+
             <ul class = "rightalign">
                 <li><a href="#">Gmail</a> </li>
                 <li><a href = "#">Images </a></li>
-                <li class = "profile" ><a href="https://github.com/oversparkling" target="_blank"></a></li>
+                <li><a href="#"><img src="/images/google-apps.svg" height="20px" width="20px"></a></li>
+                <li><a href="https://github.com/oversparkling"><img src="/images/githubprofile.png" height="20px" width="20px"></a></li>
             </ul>
-        </header>
+        </div>
+
+        <div class="centre">
+            <img class="google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+        </div>
+
+
     </div>
     
 
