90% done with designs

--- a/test.html
+++ b/test.html
@@ -40,9 +40,9 @@
 
         <div class="centre">
             Google offered in: 
-            <a href="#"> English </a> 
-            <a href="#"> Melayu  </a> 
-            <a href="#"> தமிழ்  </a> 
+            <a class="languages" href="#"> English </a> 
+            <a class="languages" href="#"> Melayu  </a> 
+            <a class="languages" href="#"> தமிழ்  </a> 
         
         </div>
         
