--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <ul class = "rightalign">
                 <li><a href="#">Gmail</a> </li>
                 <li><a href = "#">Images </a></li>
-                <li><a href="#"><img src="/images/google-apps.svg" height="20px" width="20px"></a></li>
-                <li><a href="https://github.com/oversparkling"><img src="/images/githubprofile.png" height="20px" width="20px"></a></li>
+                <li><a href="#"><img src="images/google-apps.svg" height="20px" width="20px"></a></li>
+                <li><a href="https://github.com/oversparkling"><img src="images/githubprofile.png" height="20px" width="20px"></a></li>
             </ul>
         </div>
 
